ajax calls working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <script type="text/javascript" src="lib/node_modules/lodash/lodash.min.js">
 
     </script>
-    <script type="text/javascript" src="dist/app.js"></script>
+    <script type="text/javascript" src="js/data_loader.js"></script>
   </body>
 </html>
