--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
 </head>
 
 <body>
+    <h1>PARK</h1>
 
     <div class="container" id="main-content">
 
     </div>
 
-    <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
     <script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/lodash/lodash.min.js">
-
     </script>
-    <script type="text/javascript" src="dist/app.js"></script>
+    <script type="text/javascript" src="dist/app.js">
+    </script>
+    <script type="text/javascript" src="templates/areaGrid.hbs"></script>
 </body>
 
 </html>
