--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 
     </div>
 
+    <footer class="footer">
+      <div class="container">
+        <span>Jurassic Park &copy;.<br></span>
+        <span id="demo"></span>
+      </div>
+    </footer>
     <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-        crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj"crossorigin="anonymous">
     </script>
     <script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/lodash/lodash.min.js"></script>
