--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <h1>PARK</h1>
 
     <div class="container" id="main-content">
-
+      <div class='row'>
+        <div class="col-4"></div>
+        <div class="col-8">
+          <div class='row grid-row'></div>
+        </div>
+      </div>
     </div>
 
     <footer class="footer">
@@ -23,7 +28,7 @@
     </footer>
     <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj"crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"crossorigin="anonymous">
     </script>
     <script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/lodash/lodash.min.js"></script>
