--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </footer>
     <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj"crossorigin="anonymous">
-    </script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj"crossorigin="anonymous">
+    </script> -->
     <script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/lodash/lodash.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/handlebars/dist/handlebars.min.js"></script>
