--- a/index.html
+++ b/index.html
@@ -9,11 +9,31 @@
 </head>
 
 <body>
-    <h1>PARK</h1>
+    <h1 class="text-center">PARK</h1>
 
     <div class="container" id="main-content">
       <div class='row'>
-        <div class="col-4"></div>
+        <div class="col-4">
+
+            <div id="attraction-accordion" data-children=".item">
+
+              <div class="item">
+                <a data-toggle="collapse" data-parent="#attraction-accordion" href="#exampleAccordion2" aria-expanded="true" aria-controls="exampleAccordion2">
+                  Toggle item 2
+                </a>
+                <div id="exampleAccordion2" class="collapse" role="tabpanel">
+                  <p class="mb-3">
+                    Donec at ipsum dignissim, rutrum turpis scelerisque, tristique lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus nec dui turpis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+        </div>
         <div class="col-8">
           <div class='row grid-row'></div>
         </div>
