print LI with anchor links to dom by attractions in area

--- a/index.html
+++ b/index.html
@@ -13,28 +13,20 @@
 
     <div class="container" id="main-content">
       <div class='row'>
-        <div class="col-4">
+        <div class="col-4" id="searchResults">
 
-            <div id="attraction-accordion" data-children=".item">
+<ul class="list-group list-group-attractions">
+ 
 
-              <div class="item">
-                <a data-toggle="collapse" data-parent="#attraction-accordion" href="#exampleAccordion2" aria-expanded="true" aria-controls="exampleAccordion2">
-                  Toggle item 2
-                </a>
-                <div id="exampleAccordion2" class="collapse" role="tabpanel">
-                  <p class="mb-3">
-                    Donec at ipsum dignissim, rutrum turpis scelerisque, tristique lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus nec dui turpis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                  </p>
-                </div>
-              </div>
-            </div>
+</ul>
+
 
 
 
 
 
         </div>
-        <div class="col-4" id="searchResults"></div>
+
         <div class="col-8">
           <div class='row grid-row'></div>
         </div>
