--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container" id="main-content">
       <div class='row'>
         <div class="col-4" id="searchResults"></div>
-        <div class="col-8">
+        <div class="col-8 img">
           <div class='row grid-row'></div>
         </div>
       </div>
