--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     </div>
                 </div>
             </div>
-
+        </div>
+        </div>
             <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js">
 
             </script>
