background image and text color

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 
-<body>
-    <h1>PARK</h1>
-
+<body class="bkimg">
     <div class="container" id="main-content">
         <div class='row'>
             <div class="col-4" id="searchResults">
