add responsiveness to the app

--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 </head>
 
 <body>
-    <h1>PARK</h1>
-
     <div class="container" id="main-content">
         <div class='row'>
-            <div class="col-4" id="searchResults">
+            <div class="col-sx-12 col-xl-4 order-md-12 order-lg-12" id="searchResults">
                 <div id="accordion-wrapper" data-children=".item">
 
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col order-xl-12">
                 <div class='row grid-row'>
 
                 </div>
+                <br>
             </div>
 
         </div>
