--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container" id="main-content">
         <div class='row'>
-            <div class="col-sx-12 col-xl-4 order-md-12 order-lg-12" id="searchResults">
+            <div class="col-xs-12 col-xl-4 order-md-12 order-lg-12" id="searchResults">
                 <div id="accordion-wrapper" data-children=".item">
 
                 </div>
