new footer and some CSS

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             </div>
         </div>
     </div>
+    
+    <footer class="footer">
+        <p>Jurassic Park &copy;</p>
+        <span id="demo"></span>
+    </footer>
 
 
     <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js">
