--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jurassic Park</title>
     <link rel="stylesheet" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="dist/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Slabo+27px" rel="stylesheet">
 </head>
 
 <body class="bkimg">
