button and more css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <footer class="footer">
         <p>Jurassic Park &copy;</p>
-        <span id="demo"></span>
+        <span id="demo"></span><button type="button" class="btn btn-secondary btn-sm open-cages">Open Cages</button>
     </footer>
 
 
