finished css footer size issues and background image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jurassic Park</title>
     <link rel="stylesheet" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="dist/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel|Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Slabo+27px|Ubuntu" rel="stylesheet">
 </head>
 
 <body class="bkimg">
@@ -29,7 +29,7 @@
     
     <footer class="footer">
         <p>Jurassic Park &copy;</p>
-        <span id="demo"></span><button type="button" class="btn btn-secondary btn-sm open-cages">Open Cages</button>
+        <span id="demo">
     </footer>
 
 
