--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <footer class="footer">
         <p>Jurassic Park &copy;</p>
-        <span id="demo">
+        <span id="demo"></span>
     </footer>
 
 
