--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="video">
-      <iframe id="video" src="https://www.youtube.com/embed/K55ywJ_wD64?controls=0&showinfo=0&rel=0&autoplay=1&mute=1&loop=1&playlist=W0LHTWG-UmQ" frameborder="0" allowfullscreen></iframe>
+      <iframe id="video" src="https://www.youtube.com/embed/K55ywJ_wD64?controls=0&showinfo=0&rel=0&autoplay=1&mute=1&loop=5" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="container" id="main-content">
         <div class='row'>
